# fizzbuzz

./: README.md  pyproject.toml
src/fizz1/: main.py
src/fizz_oneliner/: main.py
src/fizzbuzz/: main.py
